Fix font size on docs on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -194,7 +194,7 @@ dquo-open-pull {
 /* Command examples directives */
 body:has(h1.title) {
     max-width: 60rem;
-    font-size: 18px;
+    /* font-size: 18px; */
 }
 
 pre {
